--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=Toor
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 openweathermap.key=668710892f06a576f7d9545969376f60
+openai.model=text-davinci-001
+openkakaogpt.key= KakaoAK 1bdb4b4dea4edaa35b52ed08ed7c35f1
